--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,7 +9,7 @@ $dark: #38393a;
     bottom: 0;
     left: 0;
     right: 0;
-  }
+}
   
 
 body {
@@ -32,6 +32,7 @@ body {
     width: 100%;        
 }
 
+
 .main {
     outline: 2px dashed lightseagreen;
     display: grid;
@@ -49,9 +50,13 @@ body {
     // width: 100%;
     max-width: 900px;
     margin: 0 auto;
-    padding: 0 1em;
+    padding: 0 2em;
 }
 
+
+.lead {
+    font-size: 1.4rem;
+}
 
 
 .nav {  
@@ -61,7 +66,7 @@ body {
     left: 0;
     height: 100%;
     width: 10em;
-    background: $light;
+    // background: $light;
 //   height: 100vh;
   ul {
     // outline: 2px dashed green;
@@ -99,10 +104,14 @@ body {
     width: 100%;
     flex-direction: column;
     justify-content: center;
-    font-size: 1.7rem;
+    
 
+    h1 {
+        font-size: 3rem;
+    }
+    
     h1,
-    .lead {
+    .lead {        
         margin: 5px 0;
     }
 
@@ -112,7 +121,31 @@ body {
     
 }
 
-
-.landing {
-   
+.about {
+    ul {
+        margin: 0;
+    }
 }
+
+.three {
+    // outline: 2px solid rebeccapurple;
+    // margin: 0 auto;
+    // display: grid;
+    // grid-gap: 2em;
+    // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr) ) ;
+    // grid-auto-rows: 1fr;
+    // justify-content: end;
+
+    p {
+        max-width: 550px;
+        // float: left;
+        margin-right: 1em;
+    }
+
+}
+
+// @media(max-width:1200px) {
+//     .container {
+//         max-width: 700x;
+//     }
+// }
