--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -27,7 +27,7 @@
       transition: all 200ms ease-in;
       font-size: 1.2rem;
       &:hover {
-        border-bottom: 1px dashed $dark;
+        border-bottom: 1px dashed $med;
       }
     }
     
