--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,8 +34,14 @@ h2, h3, h4 {
     color: $med;
 }
 
+.strong--dark {
+    color: #c3cbcf;
+    font-weight: bold;
+}
+
 .lead {
     font-size: 1.6rem;
+    margin: 3em 0;
     // width: 100%;
 }
 
@@ -141,14 +147,20 @@ h2, h3, h4 {
     
 
 
-    h1,
-    .lead {        
+    h1 {        
         margin: 5px 0;
     }
 
     p {
         margin: 15px 0;
+        
     }
+
+    .lead {
+        margin: 1em 0;
+    }
+
+    
     
 }
 
@@ -203,16 +215,54 @@ h2, h3, h4 {
 .project {
     box-shadow: 0 3px 6px rgba(0,0,0,0.25);
     margin: 3em 0;
+    // padding: 2em;
+    // display: grid;
+    // grid-template-areas: "info features"
+    //                      "video video"
+    //                      "links links";
+    
+
+    border-radius: 15px;
+    // background: rgb(39, 40, 41);
+    // background: $primary;
+    // background: #f8f8f8;
+    // color: $light;
+
+    h2 {
+        color: $light; 
+        color: $primary;       
+    }
+
+    a {
+        // color: $light;   
+        transition: all 200ms ease;     
+        &:visited {
+            color: orange;
+        }
+
+        &:hover {
+            color: #181616;
+        }
+    }
+
+
+    
+}
+
+.project__features {
+    display: flex;
+    // justify-content: space-around;
+    // margin-top: 1em;
     padding: 1em;
-    display: grid;
-    grid-template-areas: "info video"
-                         "features tech";
-    grid-gap: 1em;
-    background: #ffffff;
-    border-radius: 5px;
+    background: $primary;
+    background: rgb(39, 40, 41);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    color: $light;
 }
 
 .project__list {
+    // float: left;
     p {
         margin: 0;
     }
@@ -221,28 +271,34 @@ h2, h3, h4 {
         margin: 0;
         padding: 1em;
     }
+    
 }
 
 .project__text {
+    grid-area: info;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 2em;
     h2 {
         margin: 0;
     }
     // text-align: left;
 }
 
-.project__video {
-    background: $primary;
+.project__video {    
+    // grid-area: video;
+    // background: $primary;
     // padding: 2 m;
     // margin: 1em;
+    background: rgb(39, 40, 41);
 }
 
 
 .links {
+    grid-area: links;
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     a {
         margin: .5rem 1em;
     }
