--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -213,7 +213,7 @@ h2, h3, h4 {
 
 
 .project {
-    box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+    // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
     margin: 3em 0;
     // padding: 2em;
     // display: grid;
@@ -221,7 +221,7 @@ h2, h3, h4 {
     //                      "video video"
     //                      "links links";
     
-
+    
     border-radius: 15px;
     // background: rgb(39, 40, 41);
     // background: $primary;
@@ -254,11 +254,11 @@ h2, h3, h4 {
     // justify-content: space-around;
     // margin-top: 1em;
     padding: 1em;
-    background: $primary;
-    background: rgb(39, 40, 41);
+    // background: $primary;
+    // background: rgb(39, 40, 41);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    color: $light;
+    // color: $light;
 }
 
 .project__list {
@@ -277,8 +277,11 @@ h2, h3, h4 {
 .project__text {
     grid-area: info;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    // flex-direction: column;
+    // justify-content: center;
+    // width: 100%;
+    display: grid;
+    grid-template-columns: 60% 1fr;
     padding: 2em;
     h2 {
         margin: 0;
@@ -296,9 +299,12 @@ h2, h3, h4 {
 
 
 .links {
-    grid-area: links;
+    // grid-area: links;
     display: flex;
-    // flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     a {
         margin: .5rem 1em;
     }
