--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,6 +22,10 @@ body {
 
 h1 {
     color: $primary;
+    // font-size: 2.4rem;
+}
+
+.h1 {
     font-size: 4rem;
 }
 
@@ -42,7 +46,7 @@ h4 {
 }
 
 .lead {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin: 3em 0;
     // width: 100%;
 }
@@ -55,7 +59,9 @@ h4 {
 .header {
     height: 25vh;
     display: flex;
-    align-items: center;
+    // align-items: center;
+    justify-content: center;
+    flex-direction: column;
     // background: #f9f9f9;
 }
 
@@ -147,7 +153,7 @@ h4 {
     position: absolute;
     z-index: 999;
     top: 1rem;
-    right: 2rem;    
+    right: 1rem;    
     h1 {
         margin: 0;
     }
@@ -211,23 +217,6 @@ h4 {
     }
 }
 
-
-
-
-
-// .project__list {
-//     display: flex;
-// }
-
-// .project__content{
-//     display: flex;
-
-//     div {
-//         margin: 1.5em;
-//     }
-// }
-
-
 .project {
     // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
     margin: 3em 0;
@@ -237,7 +226,7 @@ h4 {
     //                      "video video"
     //                      "links links";
     
-    
+    border: 1px solid #DADADA;
     border-radius: 15px;
     // background: rgb(39, 40, 41);
     // background: $primary;
@@ -245,8 +234,8 @@ h4 {
     // color: $light;
 
     h2 {
-        color: $light; 
-        color: $primary;       
+        // color: $light; 
+        // color: $primary;       
     }
 
     a {
@@ -267,7 +256,7 @@ h4 {
 
 .project__features {
     display: flex;
-    // justify-content: space-around;
+    justify-content: space-around;
     // margin-top: 1em;
     padding: 1em;
     // background: $primary;
@@ -296,11 +285,12 @@ h4 {
     // flex-direction: column;
     // justify-content: center;
     // width: 100%;
+    padding: 15px;
     display: grid;
     grid-template-columns: 60% 1fr;
-    padding: 2em;
+    padding-bottom: 1em;
     h2 {
-        margin: 0;
+        // margin: 0;
     }
     // text-align: left;
 }
@@ -335,15 +325,24 @@ h4 {
 @media(max-width:768px) {
 
     .project {
-        box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+        // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
         margin: 3em 0;
-        padding: 1em;
+        // padding: 1em;
         display: grid;
         grid-template-areas: "info"
                             "video"
                             "features"
                             "tech";
         grid-gap: 1em;
+    }
+
+    .project__text {
+        // padding: 0;
+        grid-template-columns: 1fr;
+    }
+
+    .links {
+        align-items: flex-start;
     }
 }
     // .main {
