--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -241,7 +241,7 @@ h4 {
     span {
         background: $primary;
         color: $light;
-        margin-right: 0.5rem;
+        margin: 0.5rem;
         padding: 0.5rem;
         border-radius: 5px;
         font-weight: 700;
