--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -241,7 +241,9 @@ h4 {
     span {
         background: $primary;
         color: $light;
-        margin: 0.5rem;
+        margin: 0.35rem;        
+        margin-top: 0;
+        margin-left: 0;
         padding: 0.5rem;
         border-radius: 5px;
         font-weight: 700;
