--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,7 +16,7 @@ $primary-dark: #14539b;
 
 html {
     font-size: 16px;
-    min-width: 300px;
+    // min-width: 300px;
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;  
@@ -237,8 +237,7 @@ h4 {
 //          SKILLS
 // =======================
 .skills--item {
-    margin-bottom: 3rem;    
-    
+    margin-bottom: 2.8rem;    
 
     div {
         // outline: 1px solid red;
@@ -259,41 +258,41 @@ h4 {
     border-radius: 5px;
     font-weight: 700;
     transition: all 200ms ease-in;    
-    &:hover {
-        color: $dark;
-        border: 1px solid $dark;
-    }
 }    
 
 
 // =======================
 //          PROJECT
 // =======================
-.project {
-    // margin: 3em 0; 
-    margin-bottom: 7rem;
-    // border: 1px solid #DADADA;
-    border-radius: 5px;
+.project {    
+    margin-bottom: 7rem;    
+    border-radius: 5px;        
+}
 
+.project--links {
+    display: flex;
+    flex-wrap: wrap;
     a {
-        // color: $light;   
-        transition: all 200ms ease;  
+        // color: $light;    
+        margin: .5rem 1em;  
+        margin-left: 0;            
         padding: 0.5rem;
-        border-radius: 5px;
-        text-decoration: none;
+        border-radius: 5px;        
         background: $primary;
-        color: $light;
-        margin: .5rem 1em;   
-        margin-left: 0;     
-        font-weight: 700;    
+        color: $light;                 
+        font-weight: 700;  
+        text-decoration: none; 
+        transition: all 200ms ease;   
         span {
-            margin-right: 5px;
-            font-size: 1.4rem;
+            margin-right: 5px;            
             line-height: 0%;
+            font-size: 1.4rem;
             transition: all 150ms ease;  
         }
+
         &:hover {
             background: $primary-dark;
+
             span {
                 padding-left: 5px;
                 margin-right: 0;                
@@ -302,16 +301,12 @@ h4 {
 
         &:last-of-type {
             background: $med;
+
             &:hover {
                 background: $dark;
             }
         }
-    }    
-}
-
-.project--links {
-    display: flex;
-    flex-wrap: wrap;
+    }
 }
 
 .project__features {      
@@ -346,7 +341,8 @@ h4 {
     flex-wrap: wrap;
 
     .skill--span {
-        font-size: 0.9rem;        
+        font-size: 0.9rem; 
+        padding: 0.25rem;          
     }
 
     // &:last-of-type {    
