Video min-height, not fixed

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -422,7 +422,7 @@ h4 {
 .project__video {    
     // background: rgb(39, 40, 41);
     position: relative;
-    height: 500px;
+    min-height: 500px;
 }
     
 .disc__item {
