--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -428,7 +428,7 @@ h4 {
 .disc__item {
 /*   background: blue; */
     position: absolute;
-    top: 50%;    
+    top: 250px;    
     left: 50%;    
     margin-top: -35px;
     margin-left: -35px;
@@ -436,8 +436,8 @@ h4 {
     width: 70px;
     border-radius: 50%;
     border: 5px solid white;
-    border-left-color: blue;
-    border-right-color: blue;  
+    border-left-color: $primary;
+    border-right-color: $primary;  
     transition: all 300ms ease;
     animation: 1000ms infinite spin;
     padding: 5px;  z-index: -2;
