loading spinner Safari bug

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -440,7 +440,8 @@ h4 {
     border-right-color: $primary;  
     transition: all 300ms ease;
     animation: 1000ms infinite spin;
-    padding: 5px;  z-index: -2;
+    padding: 5px;  
+    z-index: -2;
 }
 
 @keyframes spin {
